--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -283,22 +283,31 @@
             android:id="@+id/button_ac"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:text="AC"
+            android:textColor="#FFFFFF"
+            app:backgroundTint="#000000"
             app:layout_constraintBottom_toTopOf="@+id/divider20"
             app:layout_constraintEnd_toStartOf="@+id/vdivider55"
             app:layout_constraintStart_toEndOf="@+id/vdivider45"
             app:layout_constraintTop_toBottomOf="@+id/divider10"
-            android:background="@null"/>
+            app:strokeColor="#FFFFFF"
+            app:strokeWidth="1" />
+
         <Button
             android:id="@+id/button_acMax"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:text="AC MAX"
+            android:textColor="#FFFFFF"
+            app:backgroundTint="#000000"
             app:layout_constraintBottom_toTopOf="@+id/divider20"
             app:layout_constraintEnd_toStartOf="@+id/vdivider7"
             app:layout_constraintStart_toEndOf="@+id/vdivider6"
             app:layout_constraintTop_toBottomOf="@+id/divider10"
-            android:background="@null"/>
+            app:strokeColor="#FFFFFF"
+            app:strokeWidth="1" />
 
         <ImageButton
             android:id="@+id/button_recycle"
