--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -237,6 +237,7 @@
         <ProgressBar
             android:id="@+id/fanProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
+            android:scaleY="8"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:rotation="-90"
@@ -248,6 +249,7 @@
         <ProgressBar
             android:id="@+id/tempProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
+            android:scaleY="8"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:rotation="-90"
