--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -391,5 +391,25 @@
             app:srcCompat="@drawable/lock"
             android:background="@null"/>
 
+        <TextView
+            android:id="@+id/textView_hi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HI"
+            app:layout_constraintBottom_toTopOf="@+id/divider40"
+            app:layout_constraintEnd_toStartOf="@+id/vdivider65"
+            app:layout_constraintStart_toEndOf="@+id/vdivider55"
+            app:layout_constraintTop_toBottomOf="@+id/divider30" />
+
+        <TextView
+            android:id="@+id/textView_lo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LO"
+            app:layout_constraintBottom_toTopOf="@+id/divider50"
+            app:layout_constraintEnd_toStartOf="@+id/vdivider65"
+            app:layout_constraintStart_toEndOf="@+id/vdivider55"
+            app:layout_constraintTop_toBottomOf="@+id/divider40" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
